# deepprint

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.ghcr.yml  docker-compose.usb.yml  docker-compose.yml  package.json
apps/server/: Cargo.toml
apps/server/src/: main.rs  print_server.rs  printer.rs  renderer.rs
apps/server/src/print_backend/: discover.rs  error.rs  ipp.rs  mapper.rs  mock.rs  mod.rs  registry.rs  types.rs
apps/server/src/print_server/: auth.rs  background_tasks.rs  bootstrap.rs  config.rs  diagnostic_fs.rs  diagnostics.rs  http_server.rs  jobs.rs  models.rs  open.rs  platform_paths.rs  printer_routes.rs  rendering.rs  runtime.rs  settings.rs  shared.rs  submission.rs  template.rs  tests.rs  typst_assets.rs  utils.rs  worker.rs
apps/server/src/print_server/auth/: api_keys.rs  core.rs  sessions.rs  users.rs
apps/server/src/print_server/config/: defaults.rs  env.rs
apps/server/src/print_server/diagnostic_fs/: bundles.rs  health.rs  logs.rs  zip.rs
apps/server/src/print_server/diagnostics/: deep_health.rs  export.rs  health.rs  models.rs
apps/server/src/print_server/http_server/: cors.rs  routes.rs  serve.rs
apps/server/src/print_server/jobs/: cancel.rs  detail.rs  listing.rs
apps/server/src/print_server/models/: auth_payloads.rs  errors.rs  health.rs  jobs.rs
apps/server/src/print_server/printer_routes/: create.rs  discovery.rs  mutations.rs  queries.rs  validation.rs
apps/server/src/print_server/rendering/: direct.rs  errors.rs  subprocess.rs
apps/server/src/print_server/submission/: create.rs  direct.rs  preview.rs
apps/server/src/print_server/template/: groups.rs  models.rs  records.rs  validation.rs  workspace.rs
apps/server/src/storage/: mod.rs  sqlite.rs
docs/: history.md  (+2 more)
(+168 files in other folders)
